--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -108,9 +108,39 @@
             padding-top: 16px;
             padding-bottom: 8px;
         }
+    }mat-form-field {
+        width: 100%;
     }
+    .toggle-container {
+        left: 80ex;
+        top: 2ex;
+        width: 40px;
+        height: 20px;
+        background-color: #ccc;
+        border-radius: 15px;
+        position: relative;
+        cursor: pointer;
+      }
+      
+      .slider {
+        width: 20px;
+        height: 20px;
+        background-color: #f7f4f4;
+        border-radius: 50%;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+        position: absolute;
+        top: 0;
+        left: 0;
+        transition: transform 0.3s;
+    }
+    
+    .toggle-container.active .slider {
+      transform: translateX(30px);
+    }
+    
+    .toggle-container.active {
+      background-color: #4caf50;
+    }
+  
 }
 
-mat-form-field {
-    width: 100%;
-}
