--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -107,9 +107,12 @@
         .input-area {
             padding-top: 16px;
             padding-bottom: 8px;
+            
         }
     }mat-form-field {
         width: 100%;
+        height: 100%;
+        top: -20px;
     }
     .toggle-container {
         left: 80ex;
@@ -134,13 +137,13 @@
         transition: transform 0.3s;
     }
     
-    .toggle-container.active .slider {
-      transform: translateX(30px);
+   
+    .mat-button-toggle-group{
+        display: flex;
+        width: 140px;
+        height: 40px;
+        transform: translateX(600px);
+        top: -30px;
     }
-    
-    .toggle-container.active {
-      background-color: #4caf50;
-    }
-  
 }
 
