--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -32,7 +32,7 @@
             Passwords should match
         </mat-error>
         <div class="center margin-top">
-            <button mat-raised-button color="primary" type="submit">
+            <button mat-raised-button color="primary" type="submit" routerLink="/login">
                 Sign Up!
             </button>
         </div>
